# qsipy

./: .gitignore  LICENCE  README.md  pyproject.toml
images/FIG_asymptotic_behaviour/: qsipy_asymptotic_behaviour.py
images/FIG_optimal_phi/: qsipy_optimal_phi.py
images/FIG_tf_vs_tms/: qsipy_tf_vs_tms.py
src/qsipy/: __init__.py  tfs.py  tms.py  trigonometry.py
tests/: test_tfs.py  test_tms.py
